crates/supersigil-rust/tests/fixtures/fail/unsupported_item_struct.rs
use supersigil_rust::verifies;

#[verifies("req/auth#crit-1")]
struct NotAFunction;

fn main() {}
